--- a/public/fotos.html
+++ b/public/fotos.html
@@ -2,33 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mis vacaciones</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mis vacaciones</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <main>
     <header>
-      <nav>
-        <a href="/">Inicio</a>
-        <a href="fotos.html">Fotos</a>
-      </nav>
-      <h2>Galería completa de mis vacaciones</h2>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="fotos.html">Fotos</a>
+        </nav>
+        <h2>Galería completa de mis vacaciones</h2>
     </header>
-    <div class="fotos">
-      <img src="images/1.jpg" alt="Cody en la playa">
-      <img src="images/2.jpg" alt="Cody acampando">
-      <img src="images/3.jpg" alt="Cody en una alberca">
-      <img src="images/4.jpg" alt="Cody en una alberca">
-      <img src="images/5.jpg" alt="Cody en una alberca">
-      <img src="images/6.jpg" alt="Cody en una alberca">
-      
-    </div>
+    <main>
+        <div class="fotos">
+            <img src="images/1.jpg" alt="Cody en la playa">
+            <img src="images/2.jpg" alt="Cody acampando">
+            <img src="images/3.jpg" alt="Cody en una alberca">
+            <img src="images/4.jpg" alt="Cody en una alberca">
+            <img src="images/5.jpg" alt="Cody en una alberca">
+            <img src="images/6.jpg" alt="Cody en una alberca">
 
-  </main>
+        </div>
+
+    </main>
 </body>
 
 </html>
